objects/GSS_Split__c.object
<CustomObject>
    <description>Global Rep Split</description>
    <fields>
        <fullName>GRS_ACCT_PERIOD_Start__c</fullName>
        <label>Start Date_DO_NOT_USE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GRS_Platform__c</fullName>
        <label>PLATFORM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>DIP</fullName>
                </value>
                <value>
                    <fullName>HW</fullName>
                </value>
                <value>
                    <fullName>SERV-ES</fullName>
                </value>
                <value>
                    <fullName>SERV-HDS</fullName>
                </value>
                <value>
                    <fullName>SERV-SERV</fullName>
                </value>
                <value>
                    <fullName>SW</fullName>
                </value>
                <value>
                    <fullName>TIP</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GRS_REPID__c</fullName>
        <label>RepId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRS_REPPCT__c</fullName>
        <label>GSS_Percentage</label>
        <precision>16</precision>
        <scale>7</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GRS_REPTYPE__c</fullName>
        <label>Rep Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACC</fullName>
                </value>
                <value>
                    <fullName>AMT</fullName>
                </value>
                <value>
                    <fullName>ATX</fullName>
                </value>
                <value>
                    <fullName>ATX2</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>GATX</fullName>
                </value>
                <value>
                    <fullName>GATX2</fullName>
                </value>
                <value>
                    <fullName>GAX</fullName>
                </value>
                <value>
                    <fullName>GHAX</fullName>
                </value>
                <value>
                    <fullName>GIPS</fullName>
                </value>
                <value>
                    <fullName>HAX</fullName>
                </value>
                <value>
                    <fullName>IPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GRS_UNIQUEID__c</fullName>
        <label>GRS_UNIQUEID_DO_NOT_USE</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GSS_Account_Index_Name__c</fullName>
        <label>GSS_Account_Index_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSS_Index__c</fullName>
        <label>Account Index</label>
        <referenceTo>GSS_Index__c</referenceTo>
        <relationshipLabel>GSS Account Teams</relationshipLabel>
        <relationshipName>GSS_Splits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GSS_Role__c</fullName>
        <label>GSS_Role_DO_NOT_USE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GT_TERRITORY_CODE__c</fullName>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AS-CHN</fullName>
                </value>
                <value>
                    <fullName>AS-KR</fullName>
                </value>
                <value>
                    <fullName>AS-SE</fullName>
                </value>
                <value>
                    <fullName>AS-TW</fullName>
                </value>
                <value>
                    <fullName>EM-CE</fullName>
                </value>
                <value>
                    <fullName>EM-IS</fullName>
                </value>
                <value>
                    <fullName>EM-NE</fullName>
                </value>
                <value>
                    <fullName>EM-SC</fullName>
                </value>
                <value>
                    <fullName>EM-SE</fullName>
                </value>
                <value>
                    <fullName>ID-JP</fullName>
                </value>
                <value>
                    <fullName>ID-NA</fullName>
                </value>
                <value>
                    <fullName>IN-IND</fullName>
                </value>
                <value>
                    <fullName>JP-MAJ</fullName>
                </value>
                <value>
                    <fullName>NA-CE</fullName>
                </value>
                <value>
                    <fullName>NA-CMW</fullName>
                </value>
                <value>
                    <fullName>NA-EST</fullName>
                </value>
                <value>
                    <fullName>NA-NW</fullName>
                </value>
                <value>
                    <fullName>NA-SE</fullName>
                </value>
                <value>
                    <fullName>NA-SVS</fullName>
                </value>
                <value>
                    <fullName>NA-SW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HQ__c</fullName>
        <label>HQ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AS-CHN</fullName>
                </value>
                <value>
                    <fullName>AS-KR</fullName>
                </value>
                <value>
                    <fullName>AS-SE</fullName>
                </value>
                <value>
                    <fullName>AS-TW</fullName>
                </value>
                <value>
                    <fullName>EM-CE</fullName>
                </value>
                <value>
                    <fullName>EM-IS</fullName>
                </value>
                <value>
                    <fullName>EM-NE</fullName>
                </value>
                <value>
                    <fullName>EM-SC</fullName>
                </value>
                <value>
                    <fullName>EM-SE</fullName>
                </value>
                <value>
                    <fullName>ID-JP</fullName>
                </value>
                <value>
                    <fullName>ID-NA</fullName>
                </value>
                <value>
                    <fullName>IN-IND</fullName>
                </value>
                <value>
                    <fullName>JP-MAJ</fullName>
                </value>
                <value>
                    <fullName>NA-CE</fullName>
                </value>
                <value>
                    <fullName>NA-CMW</fullName>
                </value>
                <value>
                    <fullName>NA-EST</fullName>
                </value>
                <value>
                    <fullName>NA-NW</fullName>
                </value>
                <value>
                    <fullName>NA-SE</fullName>
                </value>
                <value>
                    <fullName>NA-SVS</fullName>
                </value>
                <value>
                    <fullName>NA-SW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ICM_GSS_Index1__c</fullName>
        <label>ICM GSS Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICM_GSS_Index__c</fullName>
        <formula>GSS_Index__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ICM_GSS_Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICM_PeriodEnd__c</fullName>
        <formula>CASE( RIGHT(Period_End__c ,2) ,
&quot;01&quot;,&quot;JANUARY&quot;,
&quot;02&quot;,&quot;FEBRUARY&quot;,
&quot;03&quot;,&quot;MARCH&quot;,
&quot;04&quot;,&quot;APRIL&quot;,
&quot;05&quot;,&quot;MAY&quot;,
&quot;06&quot;,&quot;JUNE&quot;,
&quot;07&quot;,&quot;JULY&quot;,
&quot;08&quot;,&quot;AUGUST&quot;,
&quot;09&quot;,&quot;SEPTEMBER&quot;,
&quot;10&quot;,&quot;OCTOBER&quot;,
&quot;11&quot;,&quot;NOVEMBER&quot;,
&quot;12&quot;,&quot;DECEMBER&quot;,
&quot;UNKOWN MONTH&quot;) + &apos; &apos; + LEFT(Period_End__c,4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ICM_Period_End</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICM_PeriodStart__c</fullName>
        <formula>CASE( RIGHT(Period_Start__c ,2) ,
&quot;01&quot;,&quot;JANUARY&quot;,
&quot;02&quot;,&quot;FEBRUARY&quot;,
&quot;03&quot;,&quot;MARCH&quot;,
&quot;04&quot;,&quot;APRIL&quot;,
&quot;05&quot;,&quot;MAY&quot;,
&quot;06&quot;,&quot;JUNE&quot;,
&quot;07&quot;,&quot;JULY&quot;,
&quot;08&quot;,&quot;AUGUST&quot;,
&quot;09&quot;,&quot;SEPTEMBER&quot;,
&quot;10&quot;,&quot;OCTOBER&quot;,
&quot;11&quot;,&quot;NOVEMBER&quot;,
&quot;12&quot;,&quot;DECEMBER&quot;,
&quot;UNKOWN MONTH&quot;) + &apos; &apos; + LEFT(Period_Start__c ,4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ICM_Period_Start</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICM_Role_ID__c</fullName>
        <formula>Role_ID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ICM_Role_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICM_Role_Type__c</fullName>
        <formula>Role_ID__r.Role_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ICM_Role_Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Flag__c</fullName>
        <description>0 = Previously loaded
1 = Newly loaded</description>
        <inlineHelpText>By design, it should always be 1 for integrated record</inlineHelpText>
        <label>Integration Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_GSS_Modification__c</fullName>
        <label>Last GSS Modification_DO_NOT_USE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Period_End__c</fullName>
        <label>GSS Accnt Period End</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_Start__c</fullName>
        <label>GSS Accnt Period Start</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryKeySet__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>PrimaryKeySet</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ASIA PACIFIC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>INDIA</fullName>
                </value>
                <value>
                    <fullName>JAPAN</fullName>
                </value>
                <value>
                    <fullName>NORTH AMERICA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Role ID</label>
        <referenceTo>SalesRep__c</referenceTo>
        <relationshipLabel>GSS Account Teams</relationshipLabel>
        <relationshipName>GSS_Account_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <formula>Role_ID__r.Role_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <formula>CASE( GRS_REPTYPE__c ,
&quot;R&quot;,&quot;AX&quot;,
&quot;S&quot;,&quot;SAM&quot;,
&quot;C&quot;,&quot;CE&quot;,
&quot;T&quot;,&quot;AMT&quot;,
&quot;M&quot;,&quot;AMTN&quot;,
&quot;UNKOWN Rep Type&quot;)</formula>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending ICM</fullName>
                </value>
                <value>
                    <fullName>Pending Validation</fullName>
                    <default>true</default>
                    <label>Pending Validation</label>
                </value>
                <value>
                    <fullName>Validation Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Login__c</fullName>
        <label>User Login</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GSS_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Validation_Error__c</fullName>
        <label>Validation Error</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Validation__c</fullName>
        <label>Validation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Run</fullName>
                    <default>true</default>
                    <label>Run</label>
                </value>
                <value>
                    <fullName>Skip</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WGSS_Percentage__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>WGSS Percentage</label>
        <precision>10</precision>
        <scale>7</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>isIncrementUpload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isIncrementUpload</label>
        <type>Checkbox</type>
    </fields>
    <label>GSS Account Team</label>
    <listViews>
        <fullName>Chris_Sherman</fullName>
        <columns>GSS_Account_Index_Name__c</columns>
        <columns>GSS_Index__c</columns>
        <columns>GRS_Platform__c</columns>
        <columns>GRS_REPPCT__c</columns>
        <columns>User__c</columns>
        <columns>Role_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GSS_Index__c</field>
            <operation>contains</operation>
            <value>Amlogic</value>
        </filters>
        <label>Scott sung</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000000}{MM}{DD}{YYYY}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GSS Account Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>HQ_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(OR(ISPICKVAL(HQ__c ,&apos;AS-CHN&apos;),ISPICKVAL(HQ__c ,&apos;AS-KR&apos;),ISPICKVAL(HQ__c ,&apos;AS-SE&apos;),ISPICKVAL(HQ__c ,&apos;AS-TW&apos;),ISPICKVAL(HQ__c ,&apos;EM-CE&apos;),ISPICKVAL(HQ__c ,&apos;EM-IS&apos;),ISPICKVAL(HQ__c ,&apos;EM-NE&apos;),ISPICKVAL(HQ__c ,&apos;EM-SC&apos;),ISPICKVAL(HQ__c ,&apos;EM-SE&apos;),ISPICKVAL(HQ__c ,&apos;ID-JP&apos;), ISPICKVAL(HQ__c ,&apos;IN-IND&apos;),ISPICKVAL(HQ__c ,&apos;JP-MAJ&apos;),ISPICKVAL(HQ__c ,&apos;NA-CE&apos;),ISPICKVAL(HQ__c ,&apos;NA-CMW&apos;),ISPICKVAL(HQ__c ,&apos;NA-EST&apos;),ISPICKVAL(HQ__c ,&apos;NA-SE&apos;),ISPICKVAL(HQ__c ,&apos;NA-NW&apos;),ISPICKVAL(HQ__c ,&apos;NA-SVS&apos;),ISPICKVAL(HQ__c ,&apos;NA-SW&apos;)))</errorConditionFormula>
        <errorDisplayField>HQ__c</errorDisplayField>
        <errorMessage>Please select appropriate HQ from picklist</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Region_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(OR(ISPICKVAL( Region__c ,&apos;ASIA PACIFIC&apos;),ISPICKVAL(Region__c ,&apos;EMEA&apos;),ISPICKVAL(Region__c ,&apos;INDIA&apos;),ISPICKVAL(Region__c ,&apos;JAPAN&apos;),ISPICKVAL(Region__c ,&apos;NORTH AMERICA&apos;)))</errorConditionFormula>
        <errorDisplayField>GSS_Index__c</errorDisplayField>
        <errorMessage>Please select Appropriate Region from Picklist</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(OR(ISPICKVAL(  Status__c  ,&apos;Pending Validation&apos;),ISPICKVAL(Status__c,&apos;Pending ICM&apos;),ISPICKVAL(Status__c,&apos;Validation Failed&apos;)))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Please Insert Proper Status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Territory_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(OR(ISPICKVAL( GT_TERRITORY_CODE__c ,&apos;AS-CHN&apos;),
ISPICKVAL( GT_TERRITORY_CODE__c ,&apos;AS-KR&apos;),
ISPICKVAL( GT_TERRITORY_CODE__c ,&apos;AS-SE&apos;),
ISPICKVAL( GT_TERRITORY_CODE__c ,&apos;AS-TW&apos;),
ISPICKVAL( GT_TERRITORY_CODE__c ,&apos;EM-CE&apos;),
ISPICKVAL( GT_TERRITORY_CODE__c ,&apos;EM-IS&apos;),
ISPICKVAL( GT_TERRITORY_CODE__c ,&apos;EM-NE&apos;),
ISPICKVAL( GT_TERRITORY_CODE__c ,&apos;EM-SC&apos;),
ISPICKVAL( GT_TERRITORY_CODE__c ,&apos;EM-SE&apos;),
ISPICKVAL( GT_TERRITORY_CODE__c ,&apos;ID-JP&apos;),
ISPICKVAL( GT_TERRITORY_CODE__c ,&apos;IN-IND&apos;),
ISPICKVAL( GT_TERRITORY_CODE__c ,&apos;JP-MAJ&apos;),
ISPICKVAL( GT_TERRITORY_CODE__c ,&apos;NA-CE&apos;),
ISPICKVAL( GT_TERRITORY_CODE__c ,&apos;NA-CMW&apos;),
ISPICKVAL( GT_TERRITORY_CODE__c ,&apos;NA-EST&apos;),
ISPICKVAL( GT_TERRITORY_CODE__c ,&apos;NA-NW&apos;),
ISPICKVAL( GT_TERRITORY_CODE__c ,&apos;NA-SVS&apos;),
ISPICKVAL( GT_TERRITORY_CODE__c ,&apos;NA-SE&apos;), 
ISPICKVAL( GT_TERRITORY_CODE__c ,&apos;NA-SW&apos;)))</errorConditionFormula>
        <errorDisplayField>GSS_Index__c</errorDisplayField>
        <errorMessage>Please select appropriate Territory from picklist</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_On_Split_User_Change</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ! ISNEW() &amp;&amp; ISCHANGED(User__c))</errorConditionFormula>
        <errorDisplayField>User__c</errorDisplayField>
        <errorMessage>Split User must not change.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_for_Making_Account_Index</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( GSS_Index__c )</errorConditionFormula>
        <errorDisplayField>GSS_Index__c</errorDisplayField>
        <errorMessage>Account Index field can not be edited</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_for_Making_Platform_Unedited</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED( GRS_PLATFORM__c)</errorConditionFormula>
        <errorMessage>Platform can not be edited</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_for_Making_Role_ID_Unedited</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED( Role_ID__c )</errorConditionFormula>
        <errorDisplayField>Role_ID__c</errorDisplayField>
        <errorMessage>Role Id can not be Edited</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_for_Making_Start_Period_Unedi</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED( Period_Start__c )</errorConditionFormula>
        <errorDisplayField>Period_Start__c</errorDisplayField>
        <errorMessage>Period Start can not be updated</errorMessage>
    </validationRules>
</CustomObject>